Added User to historical data call to make VKPIs work